--- a/styles/addOffPos.css
+++ b/styles/addOffPos.css
@@ -39,3 +39,44 @@
     cursor: pointer;
     margin-bottom: 20px;
   }
+
+  .serial-entry {
+    margin-bottom: 20px;
+    padding: 15px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    position: relative;
+  }
+  
+  .remove-serial {
+    position: absolute;
+    top: 0px;
+    right: 8px;
+    background-color: transparent;
+    color: black;
+    border: none;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #serial-inputs-container {
+    margin-bottom: 20px;
+  }
+  
+  .add-more {
+    color: black;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 20px;
+  }
+
+  
