--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -35,7 +35,7 @@
 
 .error-box p {
   font-size: 1rem;
-  color: #ccc;
+
   margin-bottom: 1.5rem;
 }
 
@@ -75,6 +75,9 @@
         <div class="logo">
             <img src="/images/assets/baliwasan.png" alt="DepEd Logo" />
         </div>
+        <div class="titletext">
+          <h1><span>Baliwasan</span> <span style="color:orange;"> Central School</span> Inventory System</h1>
+      </div>
 
        
         <div class="error-box">
@@ -84,7 +87,7 @@
                 The page you're looking for might have been removed,<br />
                 had its name changed, or is temporarily unavailable.
             </p>
-            <a href="/login" class="back-button"><i class="fas fa-arrow-left"></i> Back to Login</a>
+            <a href="/login" class="back-button"> Back to Login</a>
         </div>
     </div>
 </body>
