--- a/styles/empItemTable.css
+++ b/styles/empItemTable.css
@@ -39,9 +39,10 @@
 /* Table Data Cells */
 .employeeTable td,
 .itemTable td {
+  font-weight: 400;
   padding: 0.875rem 1rem;
   border-bottom: 1px solid #f1f5f9;
-  color: #475569;
+  color: var(  --textColor);
   vertical-align: middle;
   text-align: left;
 }
