--- a/styles/viewItemByCategoryTable.css
+++ b/styles/viewItemByCategoryTable.css
@@ -48,7 +48,7 @@
   .itemTable td {
     padding: 0.875rem 1rem;
     border-bottom: 1px solid #f1f5f9;
-    color: #475569;
+    color: var(  --textColor);
     vertical-align: middle;
     text-align: left;
   }
